[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/font/manrope.thin.otf" type="DynamicFontData" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/musicOff.png" type="Texture" id=3]
[ext_resource path="res://src/screens/main/Main.gd" type="Script" id=4]
[ext_resource path="res://panel.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/github.svg" type="Texture" id=6]
[ext_resource path="res://src/ui/level-control/LevelControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/musicOn.png" type="Texture" id=8]
[ext_resource path="res://src/ui/toggle-button/ToggleButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audioOn.png" type="Texture" id=11]
[ext_resource path="res://assets/audioOff.png" type="Texture" id=12]
[ext_resource path="res://assets/information.png" type="Texture" id=13]

[sub_resource type="Animation" id=3]
resource_name = "FirstFadeIn"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=13]
size = 53
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 360, 640 )
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FirstFadeIn = SubResource( 3 )
anims/RESET = SubResource( 12 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 19.0
margin_right = 11.0
margin_bottom = 19.0
color = Color( 0.105882, 0.105882, 0.231373, 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.0
margin_top = -502.0
margin_right = 267.0
margin_bottom = 501.0
alignment = 1

[node name="LevelControl" parent="Buttons" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 534.0
margin_bottom = 350.0

[node name="HSeparator2" type="HSeparator" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 374.0
margin_right = 534.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
margin_top = 403.0
margin_right = 534.0
margin_bottom = 403.0

[node name="Play" type="Button" parent="Buttons"]
margin_top = 427.0
margin_right = 534.0
margin_bottom = 553.0
size_flags_horizontal = 5
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Button" parent="Buttons"]
margin_top = 577.0
margin_right = 534.0
margin_bottom = 703.0
size_flags_horizontal = 5
text = "HELP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 727.0
margin_right = 534.0
margin_bottom = 755.0
size_flags_vertical = 3

[node name="Settings" type="HBoxContainer" parent="Buttons"]
margin_top = 779.0
margin_right = 534.0
margin_bottom = 905.0
custom_constants/separation = 18
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Panel" parent="Buttons/Settings"]
visible = false
show_behind_parent = true
margin_left = 276.0
margin_right = 396.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
rect_pivot_offset = Vector2( 60, 60 )
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="TextureButton" parent="Buttons/Settings/Info"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
texture_normal = ExtResource( 13 )

[node name="SfxButton" parent="Buttons/Settings" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_right = 179.0
margin_bottom = 126.0
icon = ExtResource( 11 )
normal_texture = ExtResource( 11 )
pressed_texture = ExtResource( 12 )

[node name="MusicButton" parent="Buttons/Settings" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 197.0
margin_right = 337.0
margin_bottom = 126.0
icon = ExtResource( 8 )
normal_texture = ExtResource( 8 )
pressed_texture = ExtResource( 3 )

[node name="GithubButton" type="Button" parent="Buttons/Settings"]
margin_left = 355.0
margin_right = 495.0
margin_bottom = 126.0
rect_min_size = Vector2( 140, 0 )
icon = ExtResource( 6 )
icon_align = 1

[node name="SimonDalvai" type="LinkButton" parent="Buttons"]
margin_left = 74.0
margin_top = 929.0
margin_right = 460.0
margin_bottom = 1003.0
focus_mode = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 13 )
text = "simondalvai.org"

[connection signal="levels" from="Buttons/LevelControl" to="." method="_on_LevelControl_levels"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Buttons/Settings/Info/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="Buttons/Settings/SfxButton" to="." method="_on_SfxButton_pressed"]
[connection signal="pressed" from="Buttons/Settings/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Buttons/Settings/GithubButton" to="." method="_on_GithubButton_pressed"]
[connection signal="pressed" from="Buttons/SimonDalvai" to="." method="_on_SimonDalvai_pressed"]
